tests/parse_errors/malformed_cond01.bkl
<?xml version="1.0" ?>
<makefile>
    <set var="FOO">
        <if cond="DOLLAR">x</if>
    </set>
</makefile>
